# TranscriptX

./: .coverage.laptop.local.31864.XiWhXlhx  .coverage.laptop.local.95898.XKrxFwHx  .coveragerc  .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.ui  Dockerfile.whisperx  ISSUE_SUMMARY.md  LICENSE  Makefile  README.md  ROADMAP.md  activate_env.sh  constraints.txt  docker-compose.secrets.yml  docker-compose.whisperx.yml  docker-compose.yml  importtime_baseline.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-lock.txt  requirements.txt  transcriptx.sh  whisperx.env.example
.cursor/commands/: cleanup.md  code-stats.md  dockerfile-efficiency.md  docs.md  pre-release.md  prune.md  rebuild.md  refactor-audit.md  tests.md
.github/workflows/: ci.yml  optional-capabilities.yml
.streamlit/: config.toml
archived/convokit/: README.md  __init__.py
assets/: README.md
config/: .pre-commit-config.yaml  alembic.ini  ocr_key.json.example
config/migrations/: env.py  script.py.mako
docs/: ARCHITECTURE.md  CLI.md  CLI_GUI_STRATEGY.md  CONTRIBUTING.md  PHASE0_INVENTORY.md  ROADMAP.md  STORAGE.md  WORKFLOWS.md  assessment-2026-03-10.md  developer_quickstart.md  docker-efficiency-baseline.md  docker.md  installation.md  output_conventions.md  plan-default-config-in-container.md  sprint_archive.md  transcription.md
docs/archived/: DEPENDENCY_MANAGEMENT.md  EMOTION_ENRICHMENT_DIAGNOSIS.md  PLAYBACK_HARMONIZATION.md
docs/contracts/: output-contract-v1.md
docs/dependencies/: scikit-learn-upgrade-assessment.md
examples/: docker-compose.ui-whisperx.yml
grouping/: domain_transcript_set.py  group_analysis_config_editor.py  group_commands.py  group_resolver.py  group_service.py  groups_page.py
scripts/: README_test_analysis_assess.md  assess_speaker_map_usage.py  build_docs.sh  clean_outputs_except_speaker_maps.py  clean_test_artifacts.py  cleanup.sh  compare_audio_quality.py  docker-clean.sh  docker-data-setup.sh  docker-setup.sh  docker-smoke-test.sh  generate_docs.py  install_librosa_macos.sh  install_llvm_macos.sh  log_code_size.py  manage_dependencies.sh  migrate_speaker_maps.py  prune_old_pipeline_runs.py  run_tests_with_timeout.py  secrets_check.sh  setup_env.sh  test_analysis_assess.py  validate_dependencies.py  validate_registry.py  whisperx-compose.sh
scripts/archived/: README.md  assess_speaker_map_usage.py  check_spacy_models.py  clean_outputs_except_speaker_maps.py  compare_audio_quality.py  dedup_output_folders.py  docker-test.sh  fix_installation.sh  migrate_diarised_transcripts.py  migrate_mp3_files.py  migrate_transcripts_to_outputs.py  ocr_batch.py  output_human_transcript.py  run_transcriptx.sh  test-docker-setup.sh  test_coverage_analyzer.py  test_pipeline_refactor.py  transcriptx_interactive.py
src/: setup.py
src/transcriptx/: __init__.py  _bootstrap.py
tests/: PHASES_4_5_COMPLETE.md  PHASE_1_2_SUMMARY.md  README.md  TEST_EXPANSION_SUMMARY.md  TEST_HEALTH_REPORT.md  TEST_SUITE_ASSESSMENT.md  TEST_SUITE_REVIEW_REPORT.md  TEST_SUITE_UPDATE_SUMMARY.md  WHISPERX_TEST_SUITE.md  __init__.py  capabilities.py  conftest.py
tests/analysis/: __init__.py  markdown_utils.py  test_acts.py  test_acts_config.py  test_affect_tension_and_contracts.py  test_contagion.py  test_conversation_loops.py  test_conversation_type.py  test_convokit.py  test_echoes.py  test_emotion.py  test_entity_sentiment.py  test_exemplars.py  test_highlights.py  test_highlights_summary_markdown.py  test_interactions.py  test_markdown_snapshots.py  test_ml_acts.py  test_module_base.py  test_module_integration.py  test_moments.py  test_momentum.py  test_ner.py  test_pauses.py  test_qa_analysis.py  test_rules.py  test_semantic_similarity.py  test_semantic_similarity_advanced.py  test_sentiment.py  test_stats.py  test_stats_report.py  test_stats_report_snapshot.py  test_summary.py  test_tag_extraction.py  test_temporal_dynamics.py  test_tics.py  test_topic_modeling.py  test_transcript_output.py  test_understandability.py  test_wordclouds.py
tests/app/: test_merge_workflow.py  test_workflows.py
tests/archived/: README.md  test_convokit.py
tests/cli/: __init__.py  test_analysis_target_picker.py  test_analysis_utils.py  test_analysis_workflow.py  test_analysis_workflow_impl.py  test_audio_fingerprinting.py  test_audio_playback.py  test_audio_utils.py  test_backup_commands.py  test_batch_resume.py  test_batch_wav_workflow_impl.py  test_batch_workflows.py  test_cli_help.py  test_config_editor.py  test_config_editor_dashboard.py  test_config_save.py  test_cross_session_commands.py  test_database_commands.py  test_deduplication_workflow_impl.py  test_display_utils.py  test_file_discovery.py  test_file_metadata_formatters.py  test_file_processor.py  test_file_rename_handler.py  test_file_selection.py  test_file_selection_interface.py  test_file_selection_utils.py  test_main.py  test_processing_state.py  test_processing_state_edge_cases.py  test_settings_ui.py  test_speaker_gate_contract.py  test_speaker_gate_policy.py  test_speaker_ignore_status.py  test_speaker_workflow.py  test_speaker_workflow_impl.py  test_tag_workflow.py  test_transcript_commands.py  test_transcript_file_commands.py  test_transcription_common.py  (+4 more)
tests/contracts/: README.md  conftest.py  normalization.py  test_artifact_contracts.py  test_emotion_contracts.py  test_manifest_contracts.py  test_manifest_driven_run.py  test_ner_contracts.py  test_output_naming.py  test_run_results_and_manifest_contracts.py  test_speaker_exclusion.py  test_topic_modeling_contracts.py  test_write_authority.py
tests/core/: test_group_key.py  test_imports.py  test_transcription_diagnostics.py  test_transcription_no_db.py  test_transcription_runspec.py  test_transcription_runtime.py
tests/database/: __init__.py  test_artifact_validation.py  test_corrections_service.py  test_groups.py  test_pipeline_repositories.py  test_pipeline_run_coordinator_cleanup.py  test_sentence_storage.py  test_sentence_vocabulary_integration.py  test_sentence_vocabulary_models.py  test_speaker_identity.py  test_vocabulary_storage.py
(+870 files in other folders)
