[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcriptx"
version = "0.1.0"
description = "Advanced transcript analysis and visualization toolkit"
authors = [
    {name = "TranscriptX Team"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    # Core dependencies will be installed from requirements.txt
    # This file is mainly for package metadata and build configuration
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "myst-parser>=2.0.0",
    "furo>=2023.9.10",
    "sphinx-autobuild>=2021.3.14",
    "sphinxcontrib-mermaid>=0.9.2",
    "sphinx-autodoc-typehints>=1.24.0",
]
ner = [
    "spacy==3.7.5",
    "thinc==8.2.5",
    "spacy-transformers==1.3.0",
]
emotion = [
    "torch>=2.0.1",
    "transformers>=4.6.0,<4.32.0",
    "nrclex>=3.0.0",
]
maps = [
    "folium==0.14.0",
    "geopy==2.3.0",
    "playwright==1.40.0",
]
visualization = [
    "matplotlib==3.7.2",
    "seaborn==0.12.2",
    "wordcloud==1.9.2",
]
plotly = [
    "plotly>=5.0.0",
]
ui = [
    "gradio>=4",
]
convokit = [
    "convokit>=2.5.3",
]
full = [
    # All dependencies from requirements.txt
]

[project.scripts]
transcriptx = "transcriptx.cli.main:app"

[project.urls]
Homepage = "https://github.com/transcriptx/transcriptx"
Documentation = "https://transcriptx.readthedocs.io"
Repository = "https://github.com/transcriptx/transcriptx"
Issues = "https://github.com/transcriptx/transcriptx/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

