[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcriptx"
version = "0.42"
description = "Advanced transcript analysis and visualization toolkit"
authors = [
    {name = "TranscriptX Team"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "typer[all]==0.16.0",
    "rich==14.1.0",
    "questionary==2.0.1",
    "yaspin==2.1.0",
    "colorama==0.4.6",
    "textstat==0.7.12",
    "prompt-toolkit>=3.0.0,<=3.0.51",
    "pandas==2.3.0",
    "numpy==1.26.4",
    "psutil==7.0.0",
    "tqdm==4.67.1",
    "click==8.2.1",
    "python-dotenv==1.1.1",
    "structlog==25.4.0",
    "tenacity==9.1.2",
    "watchdog==6.0.0",
    "humanize==4.12.3",
    "rapidfuzz>=3.0.0",
    "alive-progress==3.3.0",
    "keyring==25.6.0",
    "cryptography==45.0.5",
    "pydantic==2.9.2",
    "pydantic-settings==2.10.1",
    "cerberus==1.3.7",
    "marshmallow==4.0.0",
    "jsonschema==4.25.0",
    "pydub==0.25.1",
    "webrtcvad>=2.0.10",
    "textblob==0.17.1",
    "nltk==3.8.1",
    "scikit-learn==1.3.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "myst-parser>=2.0.0",
    "furo>=2023.9.10",
    "sphinx-autobuild>=2021.3.14",
    "sphinxcontrib-mermaid>=0.9.2",
    "sphinx-autodoc-typehints>=1.24.0",
]
# ner: convenience alias for nlp (modules use required_extras={"nlp"})
ner = [
    "spacy==3.7.5",
    "thinc==8.2.5",
]
emotion = [
    "torch>=2.0.1",
    "transformers>=4.6.0,<4.32.0",
    "nrclex>=3.0.0",
]
voice = [
    "pyannote.audio==3.3.2",
    "opensmile>=2.6.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
]
nlp = [
    "spacy==3.7.5",
    "thinc==8.2.5",
]
bertopic = [
    "bertopic>=0.17.0",
]
maps = [
    "folium==0.14.0",
    "geopy==2.3.0",
    "playwright==1.40.0",
]
visualization = [
    "matplotlib==3.7.2",
    "seaborn==0.12.2",
    "wordcloud==1.9.2",
]
plotly = [
    "plotly>=5.0.0",
]
ui = [
    "gradio>=4",
]
# full: explicit union of all optional package strings (PEP 621 cannot reference other extras)
full = [
    "pyannote.audio==3.3.2",
    "opensmile>=2.6.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "torch>=2.0.1",
    "transformers>=4.6.0,<4.32.0",
    "nrclex>=3.0.0",
    "spacy==3.7.5",
    "thinc==8.2.5",
    "bertopic>=0.17.0",
    "folium==0.14.0",
    "geopy==2.3.0",
    "playwright==1.40.0",
    "matplotlib==3.7.2",
    "seaborn==0.12.2",
    "wordcloud==1.9.2",
    "plotly>=5.0.0",
    "gradio>=4",
]

[project.scripts]
transcriptx = "transcriptx.cli.main:app"

[project.urls]
Homepage = "https://github.com/transcriptx/transcriptx"
Documentation = "https://transcriptx.readthedocs.io"
Repository = "https://github.com/transcriptx/transcriptx"
Issues = "https://github.com/transcriptx/transcriptx/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

