[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcriptx"
version = "0.5"
description = "Advanced transcript analysis and visualization toolkit"
authors = [
    {name = "TranscriptX Team"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "typer[all]==0.16.0",
    "rich==14.1.0",
    "questionary==2.0.1",
    "yaspin==2.1.0",
    "colorama==0.4.6",
    "textstat==0.7.12",
    "prompt-toolkit>=3.0.0,<=3.0.51",
    "pandas==2.3.0",
    "numpy==1.26.4",
    "psutil==7.0.0",
    "tqdm==4.67.1",
    "click==8.2.1",
    "python-dotenv==1.1.1",
    "structlog==25.4.0",
    "tenacity==9.1.2",
    "watchdog==6.0.0",
    "humanize==4.12.3",
    "rapidfuzz>=3.0.0",
    "alive-progress==3.3.0",
    "keyring==25.6.0",
    "cryptography==46.0.5",
    "pydantic==2.9.2",
    "pydantic-settings==2.10.1",
    "cerberus==1.3.7",
    "marshmallow==4.1.2",
    "jsonschema==4.25.0",
    "pydub==0.25.1",
    "webrtcvad>=2.0.10",
    "textblob==0.17.1",
    "nltk==3.9.3",
    "scikit-learn==1.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "myst-parser>=2.0.0",
    "furo>=2023.9.10",
    "sphinx-autobuild>=2021.3.14",
    "sphinxcontrib-mermaid>=0.9.2",
    "sphinx-autodoc-typehints>=1.24.0",
]
# ner: convenience alias for nlp (modules use required_extras={"nlp"})
ner = [
    "spacy==3.7.5",
    "thinc==8.2.5",
]
emotion = [
    "torch>=2.0.1",
    "transformers>=4.6.0,<4.32.0",
    "nrclex>=3.0.0",
]
voice = [
    "pyannote.audio==3.3.2",
    "opensmile>=2.6.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
]
nlp = [
    "spacy==3.7.5",
    "thinc==8.2.5",
]
bertopic = [
    "bertopic>=0.17.0",
]
maps = [
    "folium==0.14.0",
    "geopy==2.3.0",
    "playwright==1.40.0",
]
visualization = [
    "matplotlib==3.7.2",
    "seaborn==0.12.2",
    "wordcloud==1.9.2",
]
plotly = [
    "plotly>=5.0.0",
]
# full: explicit union of all optional package strings (PEP 621 cannot reference other extras)
full = [
    "pyannote.audio==3.3.2",
    "opensmile>=2.6.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "torch>=2.0.1",
    "transformers>=4.6.0,<4.32.0",
    "nrclex>=3.0.0",
    "spacy==3.7.5",
    "thinc==8.2.5",
    "bertopic>=0.17.0",
    "folium==0.14.0",
    "geopy==2.3.0",
    "playwright==1.40.0",
    "matplotlib==3.7.2",
    "seaborn==0.12.2",
    "wordcloud==1.9.2",
    "plotly>=5.0.0",
]

[project.scripts]
transcriptx = "transcriptx.web.__main__:main"

[project.urls]
Homepage = "https://github.com/transcriptx/transcriptx"
Documentation = "https://transcriptx.readthedocs.io"
Repository = "https://github.com/transcriptx/transcriptx"
Issues = "https://github.com/transcriptx/transcriptx/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py310']
extend-exclude = '''
/(
    \.venv
  | venv
  | \.transcriptx
  | site-packages
  | node_modules
  | \.git
)/
'''

[tool.ruff]
extend-exclude = [
    ".venv",
    "venv",
    ".transcriptx",
    "site-packages",
    "node_modules",
]

[tool.ruff.lint.per-file-ignores]
# Forward refs in type hints (OutputService, PipelineContext, etc.) used across analysis modules
"src/transcriptx/core/analysis/**/*.py" = ["F821"]
# Intentional late imports (avoid circular imports)
"src/transcriptx/core/pipeline/pipeline.py" = ["E402"]
"src/transcriptx/core/analysis/stats/analysis.py" = ["E402"]
"src/transcriptx/core/analysis/acts/ml_classifier.py" = ["E402"]
"src/transcriptx/core/domain/__init__.py" = ["E402"]
"src/transcriptx/core/utils/config/__init__.py" = ["E402"]
"src/transcriptx/core/utils/config/main.py" = ["E402"]
"src/transcriptx/core/utils/config/system.py" = ["E402"]
"src/transcriptx/database/repositories/*.py" = ["E402"]
"src/transcriptx/io/speaker_mapping/core.py" = ["E402"]
"tests/conftest.py" = ["E402"]
"tests/core/io/test_events_io.py" = ["E402"]
"tests/core/utils/test_chart_registry.py" = ["E402"]
"tests/io/test_transcript_normalizer.py" = ["E402"]
# Star exports in __init__
"src/transcriptx/core/pipeline/__init__.py" = ["F403", "F405"]
"src/transcriptx/core/utils/__init__.py" = ["F403", "F405"]
"src/transcriptx/database/models/__init__.py" = ["F403"]
# Forward refs in type hints (SQLAlchemy/database models)
"src/transcriptx/database/models/*.py" = ["F821"]
"src/transcriptx/io/transcript_loader.py" = ["F821"]
"src/transcriptx/core/pipeline/dag_pipeline.py" = ["F821"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
explicit_package_bases = true
warn_unused_configs = true
# Gradual typing: allow untyped defs; reduce noise until annotations are complete
disallow_untyped_defs = false
warn_return_any = false
disable_error_code = [
    "arg-type",
    "return-value",
    "assignment",
    "union-attr",
    "attr-defined",
    "var-annotated",
    "operator",
    "truthy-function",
    "name-defined",
    "call-overload",
]

# Relax strictness for modules with legacy or platform-specific code
[[tool.mypy.overrides]]
module = [
    "transcriptx.core.utils.file_lock",
    "transcriptx.core.utils.config.system",
    "transcriptx.core.utils.config.main",
    "transcriptx.core.utils.config_provider",
    "transcriptx.core.utils.slug_manager",
    "transcriptx.core.utils.similarity_utils",
    "transcriptx.core.utils.rename_transaction",
    "transcriptx.core.utils.profile_manager",
    "transcriptx.core.utils._path_core",
    "transcriptx.core.integration.error_handler",
    "transcriptx.core.data_extraction.base_extractor",
    "transcriptx.io.adapters.sembly_adapter",
    "transcriptx.utils.html_utils",
    "transcriptx.utils.error_handling",
    "transcriptx.utils.location_cache",
    "transcriptx.ui.app",
]
disallow_untyped_defs = false
warn_return_any = false

